gc.c
@@ -536,8 +536,10 @@ rb_objspace_free(rb_objspace_t *objspace)
 }
 #endif
 
-/* tiny heap size: 16KB */
+#ifndef HEAP_ALIGN_LOG
+/* default tiny heap size: 16KB */
 #define HEAP_ALIGN_LOG 14
+#endif
 #define HEAP_ALIGN (1UL << HEAP_ALIGN_LOG)
 #define HEAP_ALIGN_MASK (~(~0UL << HEAP_ALIGN_LOG))
 #define REQUIRED_SIZE_BY_MALLOC (sizeof(size_t) * 5)
